--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ a:hover {
     height: 54px;
 }
 
+ul {
+    list-style-type: none;
+}
+
 .products-list {
     display: flex;
     flex-wrap: wrap;
