--- a/css/style.css
+++ b/css/style.css
@@ -126,13 +126,13 @@ h1 {
 }
 
 .main-container {
-    width: 1170px;
-    height: 1360px;
+    /* width: 1170px;
+    height: 1360px; */
 }
 
 .filters {
-    width: 572px;
-    height: 54px;
+    /* width: 572px;
+    height: 54px; */
     margin-top: 94px;
 }
 
