--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ a {
 }
 
 .menu > a:hover,
-.menu > a:focus {
+.menu > a:focus,
+.menu > a:active {
     color: var(--brand-blue);
 }
 
@@ -38,8 +39,10 @@ a {
     color: var(--brand-gray);
 }
 
-.contact > a:hover {
-    color: var(--brand-gray);
+.contact > a:hover,
+.contact > a:focus,
+.contact > a:active {
+    color: var(--brand-blue);
 }
 
 ul {
