--- a/css/style.css
+++ b/css/style.css
@@ -1,99 +1,182 @@
 /* ----------------------------General------------------------------- */
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+}
+
+ul {
+    display: flex;
+    text-decoration: none;
+    list-style: none;
+    gap: 30px;
+}
+
+img {
+    display: block;
+}
+
+.list__item--3 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 2 * 30px) / 3);
+}
+.list__item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 3 * 30px) / 4);
+}
+
+.list__header {
+    margin-bottom: 10px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--brand-black);
+}
+
+.list__description {
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: var(--brand-gray);
+}
+
+.list__card {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    width: 270px;
+    height: 368px;
+    border-bottom: 1px solid var(--brand-black);
+    display: flex;
+    flex-direction: column;
+}
+
+.img__header {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--brand-black);
+    padding-bottom: 10px;
+}
+
+.card__description {
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--brand-gray);
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
+}
+
 :root {
     --brand-blue: #2196f3;
     --line-color: #ececec;
     --brand-black: #212121;
     --brand-gray: #757575;
     --white-color: #fff;
-    --footer-color: #2f303a;
+    --dark-color: #2f303a;
+    --light-gray-section: #f5f4fa;
 }
+
 body {
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-size: 14px;
     color: #757575;
     font-weight: normal;
+    width: 1600px;
+    margin: 0 auto;
 }
 
-/* .logo,
-.menu >li,
-.contact {
-    display: inline-block;
-} */
-.header, .menu, .contact{
+.page-header {
     display: flex;
+    align-items: center;
+    height: 80px;
+}
+
+.section--background-dark {
+    background-color: var(--dark-color);
+    color: var(--white-color);
+}
+
+.section--background-light-gray {
+    background-color: var(--light-gray-section);
+}
+
+.section--height-600 {
+    height: 600px;
+}
+
+.section--margin89 {
+    padding-top: 89px;
+}
+
+.section--margin94 {
+    margin: 94px;
+}
+
+.section--margin-bottom94 {
+    margin-bottom: 94px;
+}
+
+h1 {
+    padding-top: 195px;
+    padding-bottom: 30px;
+    font-size: 44px;
+    line-height: 60px;
+    letter-spacing: 6%;
+    text-transform: uppercase;
+    align-self: center;
+}
+
+.header-secondary {
+    font-weight: 700px;
+    font-size: 36px;
+    letter-spacing: 0.03em;
+    line-height: 42px;
+    color: var(--brand-black);
+    text-align: center;
+    padding: 0 0 50px 0;
+}
+
+.line {
+    border-bottom: var(--line-color) solid 1px;
+    width: 100%;
+}
+
+.container {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 1;
+    border: 1px dashed tomato;
+    margin: 0 auto;
     align-items: center;
 }
 
-.logo{
-    margin: 24px 93px 25px 215px;
+.container--row {
+    flex-direction: row;
 }
 
-.menu > li{
-    margin-right: 46px;
+.container--align-start {
+    align-items: flex-start;
 }
 
-.contact{
-    margin-left: 371px;
-}
-
-.contact > li{
-    margin-right: 50px;
-}
-
-a {
-    text-decoration: none;
-    color: var(--brand-black);
-}
-
-.menu > a:hover,
-.menu > a:focus,
-.menu > a:active {
-    color: var(--brand-blue);
-}
-
-.active {
-    color: var(--brand-blue);
-}
-
-.contact > a {
-    color: var(--brand-gray);
-}
-
-.contact > a:hover,
-.contact > a:focus,
-.contact > a:active {
-    color: var(--brand-blue);
-}
-
-ul {
-    list-style-type: none;
-}
-
-footer {
-    color: var(--white-color);
-    background-color: var(--footer-color);
-    line-height: 24px;
-    letter-spacing: 3%;
-    font-size: 14px;
-}
-
-.footer a {
-    color: var(--white-color);
-    display: block;
-}
-
-.logo {
-    font-size: 26px;
-    font-family: 'Raleway';
-    font-weight: bold;
-}
-
-.web-color {
-    color: var(--brand-blue);
-}
-
-.mail-footer {
-    text-decoration: underline;
+.nav {
+    margin-left: 93px;
+    gap: 46px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0.02em;
 }
 
 .btn {
@@ -102,97 +185,118 @@ footer {
     border: 2px solid var(--brand-blue);
     border-radius: 4px;
     padding: 10px 42px;
+    width: 200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-/* ----------------------------index.html------------------------------- */
-
-.landing {
-    background-color: #2f303a;
-    height: 600px;
-    color: var(--white-color);
-}
-
-h1 {
-    font-size: 44px;
-    line-height: 60px;
-    letter-spacing: 6%;
-}
-
-.order {
-    letter-spacing: 6%;
-    font-weight: bold;
-    font-size: 16px;
-}
-
-.strengths-header {
-    letter-spacing: 3%;
-    font-weight: bold;
-    color: var(--brand-black);
-}
-
-.strengths-description {
-    line-height: 24px;
-    letter-spacing: 3%;
-    color: var(--brand-gray);
-}
-
-.header-secondary {
-    font-weight: bold;
-    font-size: 36px;
-    letter-spacing: 3%;
-    color: var(--brand-black);
-}
-/* ----------------------------portfolio.html------------------------------- */
-.line {
-    border-bottom: var(--line-color) solid 1px;
-    width: 100%;
-}
-
-.main-container {
-    /* width: 1170px;
-    height: 1360px; */
-}
-
-.filters {
-    /* width: 572px;
-    height: 54px; */
-    margin-top: 94px;
-}
-
-.products-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.product {
-    width: 370px;
-    height: 404px;
-    background-color: var(--white-color);
-    margin: 3px;
-}
-
-.title {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 36px;
-    letter-spacing: 6%;
-}
-
-.category-name {
-    font-size: 16px;
-    color: var(--brand-gray);
-    line-height: 30px;
-    letter-spacing: 3%;
+.btn--align-self {
+    align-self: center;
 }
 
 .filter {
-    background-color: #f5f4fa;
-    border: 2px solid #f5f4fa;
+    width: 121px;
+    height: 38px;
+    left: 961px;
+    top: 174px;
+    background: var(--light-gray-section);
+    border-radius: 4px;
     color: var(--brand-black);
+    text-align: center;
+    border: none;
+    margin-top: 100px;
+    margin-bottom: 56px;
+}
+
+.logo {
+    font-size: 26px;
+    font-family: 'Raleway';
+    font-weight: bold;
+}
+
+.logo--color {
+    color: var(--brand-blue);
+}
+
+.logo__footer {
+    padding-bottom: 20px;
+}
+
+.link {
+    text-decoration: none;
+    color: var(--brand-black);
+}
+
+.link__footer {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.hover:hover {
+    color: var(--brand-blue);
+    cursor: pointer;
 }
 
 .filter:hover {
     background-color: var(--brand-blue);
     color: var(--white-color);
     cursor: pointer;
+}
+
+.active {
+    color: var(--brand-blue);
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+}
+.contact__header {
+    margin-left: 371px;
+    flex-direction: row;
+    gap: 50px;
+    color: var(--brand-gray);
+}
+.contact__footer {
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+
+.footer {
+    display: flex;
+    height: 252px;
+    align-items: center;
+}
+
+.list__product {
+    background: var(--white-color);
+    border: 1px solid #eeeeee;
+    width: 370px;
+    height: 404px;
+}
+
+.product__title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--brand-black);
+}
+
+.category-name {
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    flex-basis: calc((100% - 2 * 30px) / 3);
+}
+
+.product__description {
+    padding: 20px 24px 54px;
+    flex: 1;
 }
