change css style and class name
margin changed to padding

--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,8 @@ body {
     padding-top: 89px;
 }
 
-.section--margin94 {
-    margin: 94px 0;
+.section--padding94 {
+    padding: 94px 0;
 }
 
 .section--margin-bottom94 {
