--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ body {
     font-size: 14px;
     color: #757575;
     font-weight: normal;
-    width: 1600px;
     margin: 0 auto;
 }
 
@@ -164,6 +163,7 @@ h1 {
 
 .container--row {
     flex-direction: row;
+    gap: 93px
 }
 
 .container--align-start {
@@ -171,7 +171,7 @@ h1 {
 }
 
 .nav {
-    margin-left: 93px;
+    
     gap: 46px;
     font-weight: 500;
     line-height: 16px;
@@ -250,7 +250,7 @@ h1 {
     flex-direction: column;
 }
 .contact__header {
-    margin-left: 371px;
+    margin-left: auto;
     flex-direction: row;
     gap: 50px;
     color: var(--brand-gray);
