--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ h1 {
 
 .container--row {
     flex-direction: row;
-    gap: 93px
+    gap: 93px;
 }
 
 .container--align-start {
@@ -171,7 +171,6 @@ h1 {
 }
 
 .nav {
-    
     gap: 46px;
     font-weight: 500;
     line-height: 16px;
@@ -187,6 +186,7 @@ h1 {
     width: 200px;
     height: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
 
 .btn--align-self {
@@ -293,6 +293,7 @@ h1 {
     flex-wrap: wrap;
     gap: 30px;
     flex-basis: calc((100% - 2 * 30px) / 3);
+    cursor: pointer;
 }
 
 .product__description {
