--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+:root {
+    --brand-blue: #2196f3;
+    --line-color: #ececec;
+    --brand-black: #212121;
+    --white-color: #fff;
+    --dark-color: #2f303a;
+    --light-gray-section: #f5f4fa;
+    --icon-color: #afb1b8;
+    --brand-gray: #757575;
+}
 /* ----------------------------General------------------------------- */
 *,
 *::before,
@@ -6,7 +16,347 @@
     margin: 0;
 }
 
+body {
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-size: 14px;
+    color: var(--brand-gray);
+    letter-spacing: 0.03em;
+    margin: 0 auto;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
+
+.section {
+    margin-bottom: 94px;
+}
+
+.section > .container {
+    flex-direction: column;
+}
+
+a {
+    text-decoration: none;
+    color: var(--brand-black);
+    cursor: pointer;
+}
+
+.active {
+    color: var(--brand-blue);
+}
+
+.link:hover {
+    color: var(--brand-blue);
+    fill: var(--brand-blue);
+}
+
+.no-hover:hover {
+    color: var(--brand-black);
+}
+
 ul {
+    list-style: none;
+    gap: 30px;
+}
+
+img {
+    display: block;
+}
+
+.section--background-dark {
+    background-color: var(--dark-color);
+    color: var(--white-color);
+}
+
+.section--background-light-gray {
+    background-color: var(--light-gray-section);
+}
+
+.logo {
+    font-size: 26px;
+    font-family: 'Raleway';
+    font-weight: bold;
+    display: inline-block;
+    margin-right: 93px;
+}
+
+.logo--color {
+    color: var(--brand-blue);
+}
+
+.list-item {
+    display: flex;
+    /* align-items: center; */
+}
+
+.line {
+    border-bottom: var(--line-color) solid 1px;
+    width: 100%;
+}
+
+.btn {
+    background-color: var(--brand-blue);
+    color: var(--white-color);
+    border: 2px solid var(--brand-blue);
+    border-radius: 4px;
+    padding: 10px 42px;
+    width: 200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+}
+
+.btn-order {
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+}
+/* --------------------------Header------------------------------ */
+
+.page-header {
+    display: flex;
+    height: 80px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+}
+
+.list-header {
+    gap: 46px;
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #212121;
+    margin-bottom: 10px;
+}
+
+.container > .contact-div {
+    margin-left: auto;
+}
+
+.contact {
+    display: flex;
+}
+
+.link-container {
+    display: flex;
+    align-items: center;
+}
+
+.link-container > svg {
+    margin-right: 10px;
+}
+
+/* ------------------------------------ Footer --------------------------- */
+.footer {
+    height: 252px;
+}
+
+.contact-container {
+    margin-right: 70px;
+}
+
+.contact-footer {
+    line-height: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+}
+
+.logo-footer {
+    margin: 60px 0 20px 0;
+}
+
+.link-footer {
+    color: #ffffff99;
+}
+
+.footer > .list-header {
+    text-transform: uppercase;
+}
+
+.footer-socials {
+    text-align: center;
+}
+/* ----------------------------Index.html------------------------------- */
+
+h1 {
+    padding-top: 195px;
+    padding-bottom: 30px;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: 6%;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.background {
+    height: 600px;
+    background: #2f303a center url('../images/background.jpg') no-repeat;
+    color: var(--white-color);
+    background-blend-mode: difference;
+}
+
+.header-secondary {
+    font-weight: 700px;
+    font-size: 36px;
+    line-height: 42px;
+    color: var(--brand-black);
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.list {
+    display: flex;
+}
+/*----------------------------Strenghts--------------------------  */
+
+.list-item {
+    display: block;
+}
+
+.strengths > .list-item {
+    width: 270px;
+    height: 251px;
+}
+
+.list-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+    height: 120px;
+    background-color: var(--light-gray-section);
+}
+/*--------------------------------------- what we do---------------------------------------------- */
+
+/*--------------------------------------- Team ---------------------------------------------- */
+.team-card {
+    width: 270px;
+    height: 428px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    border-bottom: 1px solid var(--brand-black);
+    background-color: var(--white-color);
+}
+
+.card-description {
+    line-height: 24px;
+    color: var(--brand-gray);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 16px;
+}
+
+.img-header {
+    margin-bottom: 10px;
+    margin-top: 30px;
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: var(--brand-black);
+}
+.socials-container {
+    margin-top: 16px;
+    display: flex;
+}
+.social {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    align-items: center;
+    justify-content: center;
+}
+
+/* ----------------------------------------- Clients -------------------------------- */
+
+.client-card {
+    width: 170px;
+    height: 92px;
+    border: 1px solid var(--icon-color);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* ---------------------------------------- Portfolio.html--------------------------------------- */
+.filter {
+    width: 121px;
+    height: 38px;
+    background: var(--light-gray-section);
+    border-radius: 4px;
+    color: var(--brand-black);
+    text-align: center;
+    border: none;
+    cursor: pointer;
+}
+
+.filter:hover {
+    background-color: var(--brand-blue);
+    color: var(--white-color);
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 2 * 30px) / 3);
+    cursor: pointer;
+}
+
+.product {
+    width: 370px;
+    height: 404px;
+    border: 1px solid #eeeeee;
+}
+
+.product > img {
+    border: '1px dashed green';
+}
+
+.product:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.product-description {
+    flex-grow: 1;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.product-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    color: var(--brand-black);
+}
+
+.category-name {
+    justify-content: flex-end;
+    font-size: 16px;
+    line-height: 30px;
+    color: var(--brand-gray);
+}
+
+.--margin-100 {
+    margin-top: 100px;
+}
+
+.--gap-8 {
+    gap: 8px;
+}
+
+/* ul {
     display: flex;
     text-decoration: none;
     list-style: none;
@@ -78,23 +428,9 @@ img {
     justify-content: center;
 }
 
-:root {
-    --brand-blue: #2196f3;
-    --line-color: #ececec;
-    --brand-black: #212121;
-    --brand-gray: #757575;
-    --white-color: #fff;
-    --dark-color: #2f303a;
-    --light-gray-section: #f5f4fa;
-}
 
-body {
-    font-family: 'Roboto', 'Raleway', sans-serif;
-    font-size: 14px;
-    color: #757575;
-    font-weight: normal;
-    margin: 0 auto;
-}
+
+
 
 .page-header {
     display: flex;
@@ -152,14 +488,6 @@ h1 {
     width: 100%;
 }
 
-.container {
-    width: 1200px;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 1;
-    margin: 0 auto;
-    align-items: center;
-}
 
 .container--row {
     flex-direction: row;
@@ -217,7 +545,7 @@ h1 {
     color: var(--brand-blue);
 }
 
-.logo__footer {
+.logo-footer {
     padding-bottom: 20px;
 }
 
@@ -226,7 +554,7 @@ h1 {
     color: var(--brand-black);
 }
 
-.link__footer {
+.link-footer {
     color: rgba(255, 255, 255, 0.6);
 }
 
@@ -299,4 +627,4 @@ h1 {
 .product__description {
     padding: 20px 24px 54px;
     flex: 1;
-}
+} */
