--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,9 @@ h1 {
     text-align: center;
     border: none;
     cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
 }
 
 .filter:hover {
