--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,7 @@ h1 {
     justify-content: center;
     border-radius: 50%;
     background: var(--white-color);
+    cursor: pointer;
 }
 
 .social:hover {
