--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ a {
     color: var(--brand-blue);
 }
 
-.link:hover, link:focus {
+.link:hover,
+link:focus {
     color: var(--brand-blue);
     fill: var(--brand-blue);
 }
@@ -128,8 +129,8 @@ img {
     line-height: 30px;
 }
 
-.btn-order:hover, 
-.btn-order:focus{
+.btn-order:hover,
+.btn-order:focus {
     -webkit-box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
     -moz-box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
     box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
@@ -167,15 +168,15 @@ img {
     fill: var(--brand-gray);
 }
 
-.contact-div > .link-padding--30{
+.contact-div > .link-padding--30 {
     padding-right: 30px;
 }
 
-.contact-div > a > svg{
+.contact-div > a > svg {
     margin-right: 10px;
 }
 
-.contact-div > a{
+.contact-div > a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -222,14 +223,14 @@ img {
     margin-top: 0;
 }
 
-.socials-footer{
+.socials-footer {
     gap: 10px;
     display: flex;
 }
 
-.socials-footer > .social{
+.socials-footer > .social {
     display: flex;
-    justify-content:center ;
+    justify-content: center;
     align-items: center;
     width: 44px;
     height: 44px;
@@ -332,7 +333,7 @@ h1 {
     fill: var(--social-icon-color);
 }
 
-.card-description > .socials > .social{
+.card-description > .socials > .social {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -341,7 +342,8 @@ h1 {
     margin-top: 16px;
 }
 
-.social:hover, .social:focus {
+.social:hover,
+.social:focus {
     border-radius: 50%;
     background-color: var(--brand-blue);
     fill: var(--white-color);
@@ -359,16 +361,56 @@ h1 {
     justify-content: center;
 }
 
-.client-card > a > svg{
+.client-card > a > svg {
     fill: var(--social-icon-color);
 }
 
-.client-card:hover,.client-card:focus{
+.client-card:hover,
+.client-card:focus {
     border-color: var(--brand-blue);
 }
 
-.client-card > a > svg:hover,.client-card > a > svg:focus {
+.client-card > a > svg:hover,
+.client-card > a > svg:focus {
     fill: var(--brand-blue);
+}
+
+/* ---------------------------------------- Backdrop ------------------------------------------ */
+.backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    min-height: 581px;
+    background-color: var(--white-color);
+}
+
+.close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--white-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
 /* ---------------------------------------- Portfolio.html--------------------------------------- */
@@ -393,10 +435,12 @@ h1 {
     margin-bottom: 56px;
 }
 
-.filter:hover, .filter:focus {
+.filter:hover,
+.filter:focus {
     background-color: var(--brand-blue);
     color: var(--white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .products {
@@ -416,7 +460,8 @@ h1 {
     border: '1px dashed green';
 }
 
-.product:hover, .product:focus  {
+.product:hover,
+.product:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
