--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,28 @@ h1 {
 }
 /*--------------------------------------- what we do---------------------------------------------- */
 
+.our-services {
+}
+
+.thumb{
+    position: relative;
+}
+
+.label {
+    position: absolute;
+    bottom: 0;
+    height: 70px;
+    width: 100%;
+    background: rgba(47, 48, 58, 0.8);
+    color: var(--white-color);
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /*--------------------------------------- Team ---------------------------------------------- */
 .team-card {
     width: 270px;
