--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ h1 {
 .our-services {
 }
 
-.thumb{
+.thumb {
     position: relative;
 }
 
@@ -407,7 +407,9 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: var(--backdrop-background);
-    transition: all 250ms ease-in;
+    transition: opacity 500ms ease-in-out, visibility 500ms ease-in-out;
+    opacity: 1;
+    visibility: visible;
 }
 
 .modal {
@@ -444,7 +446,6 @@ h1 {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: all 250ms ease-in;
 }
 
 /* ---------------------------------------- Portfolio.html--------------------------------------- */
