--- a/css/style.css
+++ b/css/style.css
@@ -493,15 +493,62 @@ h1 {
 
 /* -------------------------------------------FORM----------------------------------- */
 
-.form-container{
+.container-form{
+    margin: 40px;
+    width: auto;
+    height: 500px;
+    display: block;
+}
+
+.form-header{
+   margin-bottom: 12px;
+   font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: var(--brand-black);
+}
+
+.label-modal input{
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    text-indent: 40px;
+    margin-bottom: 10px;
+}
+
+.comment textarea{
+    resize: none;
+    height: 120px;
+    width: 448px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.terms-label{
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.terms-label p{
+    margin-left: 8px;
+}
+
+.terms-label  .link{
+    color: var(--brand-blue);
+    text-decoration: underline;
+}
+
+.container-form .btn{
+    
+}
+/* .form-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.form-container .btn{
-    
 }
 
 .modal h3{
@@ -517,9 +564,9 @@ h1 {
 
 .form-label{
     position: relative;
-    /* margin-bottom: 10px; */
-}
+    /* margin-bottom: 10px; }*/
 
+/* 
 .form-label > svg{
     position: absolute;
     display: block;
@@ -562,7 +609,7 @@ h1 {
 
 .modal .btn{
     margin-top: 30px;
-}
+} */
 
 /* .email-label,.name-label,phone-label{
     margin-top: 20px;
