--- a/css/style.css
+++ b/css/style.css
@@ -509,8 +509,6 @@ h1 {
     color: var(--brand-black);
 }
 
-
-
 .input {
     /* position: relative; */
     width: 448px;
@@ -536,12 +534,6 @@ h1 {
     margin-left: 10px;
 }
 
-.custom-checkbox::before{
-    display: block;
-    content: "";
-
-}
-
 .comment textarea {
     resize: none;
     height: 120px;
@@ -551,7 +543,58 @@ h1 {
     padding: 12px 16px;
 }
 
-.terms-label {
+.policy-container {
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+}
+
+.modal-form-policy-text {
+}
+
+.modal-form-policy-text::before {
+    display: block;
+    content: '';
+    width: 16px;
+    height: 16px;
+    outline: 2px solid black;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.modal-form-policy:checked + .modal-form-policy-text::before {
+    border: none;
+    background-image: url('./images/icons.svg#icon-check');
+    fill: white;
+    background-color: var(--brand-blue);
+    outline: 1px solid var(--brand-blue);
+}
+
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+
+label .link {
+    color: var(--brand-blue);
+    text-decoration: underline;
+}
+
+.button-center {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/* .terms-label {
     display: flex;
     position: relative;
     margin-top: 20px;
@@ -572,9 +615,18 @@ h1 {
     width: 16px;
     background-color: var(--white-color);
     cursor: pointer;
+    border: 1px solid black;
 }
 
-label:focus-within svg {
+.custom-checkbox::before {
+    display: block;
+    content: '';
+    width: 16px;
+    height: 16px;
+    border: 1px solid black;
+} */
+
+/* label:focus-within svg {
     fill: var(--brand-blue);
 }
 
@@ -586,13 +638,7 @@ label:focus-within svg {
 .terms-label .link {
     color: var(--brand-blue);
     text-decoration: underline;
-}
-
-.button-center {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
+} */
 
 /* ---------------------------------------- Portfolio.html--------------------------------------- */
 .section-portfolio {
