--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,12 @@ a {
 link:focus {
     color: var(--brand-blue);
     fill: var(--brand-blue);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .no-hover:hover {
     color: var(--brand-black);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 ul {
@@ -147,6 +149,7 @@ img {
     -webkit-box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
     -moz-box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
     box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social > svg {
@@ -414,6 +417,7 @@ h1 {
     border-radius: 50%;
     background-color: var(--brand-blue);
     fill: var(--white-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ----------------------------------------- Clients -------------------------------- */
@@ -435,6 +439,7 @@ h1 {
 .client-card:hover,
 .client-card:focus {
     border-color: var(--brand-blue);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-card > a > svg:hover,
@@ -483,6 +488,7 @@ h1 {
 .close-btn:hover {
     fill: var(--brand-blue);
     border: 1px solid var(--brand-blue);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
@@ -510,7 +516,6 @@ h1 {
 }
 
 .input {
-    /* position: relative; */
     width: 448px;
     height: 40px;
     border: none;
@@ -521,6 +526,11 @@ h1 {
 
 .input:focus {
     outline: 1px solid var(--brand-blue);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+input:focus + svg {
+    fill: var(--brand-blue);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-icons {
@@ -548,7 +558,7 @@ h1 {
     display: flex;
     align-items: center;
     text-align: center;
-
+    margin-bottom: 30px;
 }
 
 .modal-form-policy-text {
@@ -668,6 +678,7 @@ label .link {
     color: var(--white-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .products {
@@ -717,6 +728,7 @@ label .link {
 .product:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .product-description {
