--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ h1 {
     text-indent: 40px;
 }
 
-.input:focus {
+.input:focus, textarea:focus {
     outline: 1px solid var(--brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -554,14 +554,15 @@ input:focus + svg {
 }
 
 .policy-container {
-    border: 1px solid red;
     display: flex;
     align-items: center;
     text-align: center;
     margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .modal-form-policy-text {
+    display: inline-flex;
 }
 
 .modal-form-policy-text::before {
@@ -572,11 +573,12 @@ input:focus + svg {
     outline: 2px solid black;
     border-radius: 4px;
     cursor: pointer;
+    margin-right: 8px;
 }
 
 .modal-form-policy:checked + .modal-form-policy-text::before {
     border: none;
-    background-image: url('./images/icons.svg#icon-check');
+    background-image: url('../images/icons.svg#icon-check');
     fill: white;
     background-color: var(--brand-blue);
     outline: 1px solid var(--brand-blue);
@@ -596,6 +598,7 @@ input:focus + svg {
 label .link {
     color: var(--brand-blue);
     text-decoration: underline;
+    /* white-space: pre; */
 }
 
 .button-center {
