--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,8 @@ h1 {
     text-indent: 40px;
 }
 
-.input:focus, textarea:focus {
+.input:focus,
+textarea:focus {
     outline: 1px solid var(--brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -578,8 +579,8 @@ input:focus + svg {
 
 .modal-form-policy:checked + .modal-form-policy-text::before {
     border: none;
-    background-image: url('../images/icons.svg#icon-check');
-    fill: white;
+    background-image: url('../images/icon-check.svg');
+    /* fill: white; */
     background-color: var(--brand-blue);
     outline: 1px solid var(--brand-blue);
 }
