--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a {
     bottom: 0;
     left: 0;
     background-color: var(--brand-blue);
-    transform: translateY(28px);
+    transform: translateY(30px);
     border-radius: 2px;
 }
 
@@ -145,7 +145,9 @@ img {
 }
 
 .btn-order:hover,
-.btn-order:focus {
+.btn-order:focus,
+.btn-submit:hover,
+.btn-submit:focus {
     -webkit-box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
     -moz-box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
     box-shadow: inset 0px 0px 41px 0px rgba(0, 0, 0, 1);
@@ -600,7 +602,12 @@ input:focus + svg {
 label .link {
     color: var(--brand-blue);
     text-decoration: underline;
-    /* white-space: pre; */
+    transition: transform 0.7s ease-in-out;
+}
+
+label .link:hover,
+label .link:focus {
+    transform: scale(1.05);
 }
 
 .button-center {
