update names in form
update names in form

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import './components/team-section';
 @import './components/clients-section';
 @import './components/footer';
+@import './components/portfolio';
 
 .section{
 @include section-margin();
