--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -21,29 +21,40 @@
     color: $black-color;
 }
 
+.border {
+    margin-top: 4px;
+    margin-bottom: 10px;
+}
+
 .form__input {
     width: 448px;
     height: 40px;
     border: none;
     outline: 1px solid rgba(33, 33, 33, 0.2);
+
     border-radius: 4px;
     text-indent: 40px;
 }
 
-.border{
+.border {
     position: relative;
 }
 
-.form__icon{
+.form__icon {
     position: absolute;
     left: 15px;
     top: 50%;
     transform: translateY(-50%);
 }
 
+textarea{
+    margin-top: 4px;
+}
 
-.input:focus,
-textarea:focus {
+.form__input:focus,
+.form__input:hover,
+textarea:focus,
+textarea:hover {
     outline: 1px solid $brand-blue;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
