--- a/sass/components/_services-section.scss
+++ b/sass/components/_services-section.scss
@@ -1,4 +1,6 @@
-
+.services__container{
+    @include container($flex-direction: column, $justify:center)
+}
 .services {
     list-style: none;
     display: flex;
