--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -6,6 +6,10 @@
 //     justify-content: center;
 // }
 
+.clients__container {
+    @include container($flex-direction: column, $justify: center);
+}
+
 .section__header-secondary {
     font-family: 'Roboto';
     font-style: normal;
@@ -28,8 +32,8 @@
         background-color: $white-color;
         width: 170px;
         height: 92px;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-            0px 2px 1px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+            0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
         cursor: pointer;
 
@@ -42,7 +46,6 @@
         }
     }
 }
-
 
 .clients__card:hover,
 .clients__card:focus {
