--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,11 +5,11 @@
 @import './components/backdrop';
 @import './components/button-close';
 @import './components/button';
-@import './components/container';
-@import './components/container--header';
-@import './components/container--center';
-@import './components/container--column';
-@import './components/container--topsection';
+// @import './components/container';
+// @import './components/header__container';
+// @import './components/container--center';
+// @import './components/container--column';
+// @import './components/container--topsection';
 @import './components/header-secondary';
 @import './components/modal';
 @import './components/form-modal';
@@ -17,7 +17,7 @@
 @import './components/header';
 @import './components/top-section';
 @import './components/strengths-section';
-@import './components/what-we-do-section';
+@import './components/services-section';
 @import './components/team-section';
 @import './components/clients-section';
 @import './components/footer';
