--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,3 +2,12 @@
     margin-top: $top;
     margin-bottom: $bottom;
 }
+
+@mixin container($flex-direction: row, $justify:flex-start, $align:stretch) {
+    width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: $flex-direction;
+    justify-content: $justify;
+    align-items: $align;
+}
