--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,3 +1,11 @@
+.filters__container {
+    @include container($justify: center);
+}
+
+.products__container {
+    @include container();
+}
+
 .filters {
     display: flex;
     list-style: none;
@@ -17,7 +25,7 @@
     color: #212121;
     border-radius: 4px;
     border: none;
-    margin-bottom:50px;
+    margin-bottom: 50px;
     cursor: pointer;
 }
 
