using map values, deleted container's partials
header line added,
changed values and used map instead values
deleted container partials

--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -14,7 +14,7 @@ $font-size: (
 );
 $letter-spacing: (
     'standard': 0.03em,
-    'header': 0.06em,
+    'header-primary': 0.06em,
     'links': 0.02em
 );
 $standard-font: 'Roboto', sans-serif;
