--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ img {
 }
 
 .section__header-secondary {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
@@ -282,6 +282,8 @@ label .link:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid #ececec;
+  width: 100%;
 }
 
 .header__container {
@@ -348,8 +350,8 @@ label .link:focus {
   bottom: 0;
   left: 0;
   background-color: #2196f3;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
+  -webkit-transform: translateY(29px);
+          transform: translateY(29px);
   border-radius: 2px;
 }
 
