--- a/sass/components/_header-secondary.scss
+++ b/sass/components/_header-secondary.scss
@@ -1,11 +1,11 @@
 .section__header-secondary {
-    font-family: 'Roboto';
+    font-family: $standard-font;
     font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
+    font-weight: map-get($font-weight, bold);
+    font-size: map-get($font-size, section-header);
     line-height: 42px;
     text-align: center;
-    letter-spacing: 0.03em;
+    letter-spacing: map-get($letter-spacing, standard);
     color: $secondary-text;
     margin-bottom: 50px;
 }
