--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,10 +2,12 @@
     display: flex;
     height: 80px;
     align-items: center;
+    border-bottom: 1px solid $header-line;
+    width: 100%;
 }
 
-.header__container{
-    @include container($align:center);
+.header__container {
+    @include container($align: center);
 }
 
 .nav,
@@ -51,7 +53,7 @@
     bottom: 0;
     left: 0;
     background-color: $brand-blue;
-    transform: translateY(30px);
+    transform: translateY(29px);
     border-radius: 2px;
 }
 
